--- a/css/app.css
+++ b/css/app.css
@@ -401,3 +401,75 @@ label.dropdown-item {
       display: none; } }
 
 /*# sourceMappingURL=app.css.map */
+
+/* SONIFICATION */
+
+.time-cursor {
+    display: block;
+    width: 1px;
+    height: 100%;
+    /* left: 10px; */
+    position: absolute;
+    border-left-style: dotted;
+    border-left-color: red;
+    border-left-width: medium;
+}
+
+.sonification-container {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 10px;
+    padding: 10px;
+}
+
+.sonification-top-container {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.sonification-bottom-container {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    height: 80px;
+    width: 100%;
+}
+
+.sonification-column {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 4px;
+    width: 100%;
+    border: 1px solid #5f5f5f;
+}
+
+.sonification-label {
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.sonification-button {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Times New Roman', Times, serif;
+    width: 100%;
+    height: 100%;
+}
