--- a/css/app.css
+++ b/css/app.css
@@ -443,11 +443,11 @@ label.dropdown-item {
     justify-content: space-between;
     align-items: center;
     margin-top: 10px;
-    height: 80px;
+    height: fit-content;
     width: 100%;
 }
 
-.sonification-column {
+.signal-box {
     display: flex;
     flex-flow: row;
     flex-wrap: nowrap;
@@ -458,9 +458,20 @@ label.dropdown-item {
     border: 1px solid #5f5f5f;
 }
 
-.sonification-label {
+.signal-label {
     display: flex;
     font-family: 'Times New Roman', Times, serif;
+}
+
+.sonification-column {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 4px;
+    width: 100%;
+    border: 1px solid #e0dede;
 }
 
 .sonification-button {
@@ -473,3 +484,30 @@ label.dropdown-item {
     width: 100%;
     height: 100%;
 }
+
+.sonification-controller {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Times New Roman', Times, serif;
+    width: 100%;
+    height: 100%;
+}
+
+.slider-container {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%;
+}
+
+.slider-label {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 2px;
+    padding: 2px;
+} 
