--- a/css/app.css
+++ b/css/app.css
@@ -440,11 +440,31 @@ label.dropdown-item {
     display: flex;
     flex-flow: row;
     flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: space-between; */
+    /* align-items: center; */
     margin-top: 10px;
-    height: fit-content;
+    /* height: fit-content; */
     width: 100%;
+}
+
+.sonification-left-container {
+    display: flex;
+    flex-flow: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    /* align-items: center; */
+    height: fit-content;
+    width: 70%;
+}
+
+.sonification-right-container {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    /* justify-content: space-around; */
+    /* align-items: center; */
+    /* height: fit-content; */
+    width: 30%;
 }
 
 .signal-box {
@@ -467,11 +487,14 @@ label.dropdown-item {
     display: flex;
     flex-flow: column;
     flex-wrap: nowrap;
-    justify-content: space-around;
-    align-items: center;
+    background-color: #333333;
+    /* justify-content: space-around; */
+    /* align-items: center; */
     padding: 4px;
     width: 100%;
+    /* height: 100%; */
     border: 1px solid #e0dede;
+    padding-bottom: 30px;
 }
 
 .sonification-button {
@@ -481,8 +504,9 @@ label.dropdown-item {
     align-items: center;
     justify-content: space-around;
     font-family: 'Times New Roman', Times, serif;
-    width: 100%;
-    height: 100%;
+    color: #333333
+    /* width: 100%; */
+    /* height: 100%; */
 }
 
 .sonification-controller {
@@ -494,6 +518,10 @@ label.dropdown-item {
     font-family: 'Times New Roman', Times, serif;
     width: 100%;
     height: 100%;
+}
+
+.sonification-slider {
+    width: 70%;
 }
 
 .slider-container {
@@ -508,6 +536,41 @@ label.dropdown-item {
 
 .slider-label {
     font-family: 'Times New Roman', Times, serif;
+    color: #ffffff;
     margin: 2px;
     padding: 2px;
 } 
+
+.output-window {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: nowrap;
+    /* align-items: center; */
+    /* justify-content: space-around; */
+    /* width: 100%; */
+    height: 100%;
+    padding: 4px;
+    background-color: #333333;
+}
+
+.output-window-title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
+    /* height: 20%; */
+    /* width: 100%; */
+}
+
+.output-window-content {
+    display: flex;
+    font-family: 'Times New Roman', Times, serif;
+    color: #ffffff;
+    /* height: 80%; */
+    /* width: 100%; */
+    padding-top: 10px;
+    padding: 5%;
+    /* align-items: flex-end; */
+}
